@@ -20,6 +20,7 @@
 17. Add 'Average' volume control to group volume dialog.
 18. Only disable menu, dialog, etc. shadows on Dark, Darker, and Black themes.
 19. Try to display group volume dialog under button.
+20. In desktop layout with MAI installed '(i)' button shows track info.
 
 3.3.5
 -----
